--- a/views/contacto.html
+++ b/views/contacto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Contacto | Studio BAD DOG</title>
+    <title>Contacto | Alpha Digital Media</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,14 +20,14 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="icon" href="/img/logo_transparente_ADM.png" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="img/logo_transparente_ADM.png" />
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="/index.html">
-          <img src="/img/logo_transparente_ADM.png" alt="Alpha Digital Media" />
+        <a class="navbar-brand" href="index.html">
+          <img src="img/logo_transparente_ADM.png" alt="Alpha Digital Media" />
         </a>
         <button
           class="navbar-toggler border-0"
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-lg-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Inicio</a>
+              <a class="nav-link" href="index.html">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -74,18 +74,16 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/views/galeria.html">Galeria</a>
+              <a class="nav-link" href="views/galeria.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/views/presupuestos.html"
-                >Presupuesto</a
-              >
+              <a class="nav-link" href="views/presupuestos.html">Presupuesto</a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="/views/contacto.html"
+                href="views/contacto.html"
                 >Contacto</a
               >
             </li>
@@ -101,7 +99,7 @@
             <p class="fs-5">¡Envíame tus comentarios!</p>
             <p class="fs-5">
               Para más información, puedes contactarme en
-              <a href="mailto:info@studiobaddog.com"
+              <a href="mailto:info@alphadigitalmedia.com"
                 >info@alphadigitalmedia.com</a
               >
             </p>
@@ -199,7 +197,7 @@
           <div class="col-12 col-lg-6">
             <p class="text-white">
               Direccion: Calle D` Aaron Vidal Lopez, 46026, valencia.
-              <a href="/views/contacto.html"> Encuentranos</a>
+              <a href="views/contacto.html"> Encuentranos</a>
             </p>
           </div>
           <div class="col-12 col-lg-6">
