--- a/views/galeria.html
+++ b/views/galeria.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Contacto | Studio BAD DOG</title>
+    <title>Contacto | Alpha Digital Media</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,14 +20,14 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="img/favicon.png" />
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="/index.html">
-          <img src="/img/logo_transparente_ADM.png" alt="Alpha Digital Media" />
+        <a class="navbar-brand" href="index.html">
+          <img src="img/logo_transparente_ADM.png" alt="Alpha Digital Media" />
         </a>
         <button
           class="navbar-toggler border-0"
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-lg-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Inicio</a>
+              <a class="nav-link" href="index.html">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -77,17 +77,15 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="/views/galeria.html"
+                href="views/galeria.html"
                 >Galeria</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/views/presupuestos.html"
-                >Presupuesto</a
-              >
+              <a class="nav-link" href="views/presupuestos.html">Presupuesto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/views/contacto.html">Contacto</a>
+              <a class="nav-link" href="views/contacto.html">Contacto</a>
             </li>
           </ul>
         </div>
@@ -128,7 +126,7 @@
           <div class="col-12 col-lg-6">
             <p class="text-white">
               Direccion: Calle D` Aaron Vidal Lopez, 46026, valencia.
-              <a href="/views/contacto.html"> Encuentranos</a>
+              <a href="views/contacto.html"> Encuentranos</a>
             </p>
           </div>
           <div class="col-12 col-lg-6">
@@ -146,6 +144,6 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
