rutas de carpetas prueba

--- a/views/presupuestos.html
+++ b/views/presupuestos.html
@@ -20,15 +20,15 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="icon" href="img/favicon.png" />
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/index.html">
           <img
-            src="img/logo_transparente_blanco_ADM.png
+            src="/img/logo_transparente_blanco_ADM.png
             "
             alt="Alpha Digital Media"
           />
@@ -47,7 +47,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-lg-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Inicio</a>
+              <a class="nav-link" href="/index.html">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -84,12 +84,12 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="views/presupuestos.html"
+                href="/views/presupuestos.html"
                 >Presupuesto</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="views/contacto.html">Contacto</a>
+              <a class="nav-link" href="/views/contacto.html">Contacto</a>
             </li>
           </ul>
         </div>
@@ -101,7 +101,7 @@
           <h1>Comencemos tu nuevo proyecto</h1>
           <div class="container">
             <img
-              src="img/logo_fondo_blanco_ADM.jpg"
+              src="/img/logo_fondo_blanco_ADM.jpg"
               class="img-fluid"
               alt="Alpha Digital Media Logo"
             />
@@ -238,7 +238,7 @@
           </article>
           <article class="col-12 col-lg-6">
             <img
-              src="img/workflow-step-2.png"
+              src="/img/workflow-step-2.png"
               alt="Paso 2: Propuesta de Diseño"
             />
           </article>
@@ -259,7 +259,10 @@
             </p>
           </article>
           <article class="col-12 col-lg-6">
-            <img src="img/workflow-step-5.png" alt="Paso 5: Fin del Proyecto" />
+            <img
+              src="/img/workflow-step-5.png"
+              alt="Paso 5: Fin del Proyecto"
+            />
           </article>
         </section>
       </div>
@@ -299,7 +302,7 @@
           <div class="col-12 col-lg-6">
             <p class="text-white">
               Direccion: Calle D` Aaron Vidal Lopez, 46026, valencia.
-              <a href="views/contacto.html"> Encuentranos</a>
+              <a href="/views/contacto.html"> Encuentranos</a>
             </p>
           </div>
           <div class="col-12 col-lg-6">
@@ -317,6 +320,6 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
