--- a/views/presupuestos.html
+++ b/views/presupuestos.html
@@ -20,13 +20,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="icon" href="img/favicon.png" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="icon" href="./img/favicon.png" />
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="/index.html">
+        <a class="navbar-brand" href="./index.html">
           <img
             src="/img/logo_transparente_blanco_ADM.png
             "
@@ -47,7 +47,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-lg-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Inicio</a>
+              <a class="nav-link" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -78,13 +78,13 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="views/galeria.html">Galeria</a>
+              <a class="nav-link" href="./views/galeria.html">Galeria</a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="/views/presupuestos.html"
+                href="../presupuestos.html"
                 >Presupuesto</a
               >
             </li>
@@ -302,7 +302,7 @@
           <div class="col-12 col-lg-6">
             <p class="text-white">
               Direccion: Calle D` Aaron Vidal Lopez, 46026, valencia.
-              <a href="/views/contacto.html"> Encuentranos</a>
+              <a href="../views/contacto.html"> Encuentranos</a>
             </p>
           </div>
           <div class="col-12 col-lg-6">
@@ -320,6 +320,6 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/script.js"></script>
+    <script type="text/javascript" src="../js/script.js"></script>
   </body>
 </html>
