--- a/views/presupuestos.html
+++ b/views/presupuestos.html
@@ -28,7 +28,7 @@
       <div class="container">
         <a class="navbar-brand" href="./index.html">
           <img
-            src="/img/logo_transparente_blanco_ADM.png
+            src="../img/logo_transparente_blanco_ADM.png
             "
             alt="Alpha Digital Media"
           />
@@ -47,7 +47,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-lg-auto">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">Inicio</a>
+              <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -78,18 +78,18 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./views/galeria.html">Galeria</a>
+              <a class="nav-link" href="galeria.html">Galeria</a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="../presupuestos.html"
+                href="presupuestos.html"
                 >Presupuesto</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/views/contacto.html">Contacto</a>
+              <a class="nav-link" href="/contacto.html">Contacto</a>
             </li>
           </ul>
         </div>
@@ -101,7 +101,7 @@
           <h1>Comencemos tu nuevo proyecto</h1>
           <div class="container">
             <img
-              src="/img/logo_fondo_blanco_ADM.jpg"
+              src="../img/logo_fondo_blanco_ADM.jpg"
               class="img-fluid"
               alt="Alpha Digital Media Logo"
             />
@@ -238,7 +238,7 @@
           </article>
           <article class="col-12 col-lg-6">
             <img
-              src="/img/workflow-step-2.png"
+              src="../img/workflow-step-2.png"
               alt="Paso 2: Propuesta de Diseño"
             />
           </article>
@@ -260,7 +260,7 @@
           </article>
           <article class="col-12 col-lg-6">
             <img
-              src="/img/workflow-step-5.png"
+              src="../img/workflow-step-5.png"
               alt="Paso 5: Fin del Proyecto"
             />
           </article>
@@ -302,7 +302,7 @@
           <div class="col-12 col-lg-6">
             <p class="text-white">
               Direccion: Calle D` Aaron Vidal Lopez, 46026, valencia.
-              <a href="../views/contacto.html"> Encuentranos</a>
+              <a href="/contacto.html"> Encuentranos</a>
             </p>
           </div>
           <div class="col-12 col-lg-6">
