--- a/views/contacto.html
+++ b/views/contacto.html
@@ -4,30 +4,40 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Contacto | Alpha Digital Media</title>
+    <!--  link cdn boostrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <!--  link cdn iconos de boostrap -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!--  link para fuentes -->
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <!--  link estilos css propios -->
     <link rel="stylesheet" href="css/style.css" />
+
+    <!--  Imagen de barra de navegador (favicon) -->
     <link rel="icon" href="img/logo_transparente_ADM.png" />
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <img src="img/logo_transparente_ADM.png" alt="Alpha Digital Media" />
+        <a class="navbar-brand" href="../index.html">
+          <img
+            src="../img/logo_transparente_ADM.png"
+            alt="Alpha Digital Media"
+          />
         </a>
         <button
           class="navbar-toggler border-0"
@@ -43,7 +53,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-lg-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Inicio</a>
+              <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -74,16 +84,16 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="views/galeria.html">Galeria</a>
+              <a class="nav-link" href="galeria.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="views/presupuestos.html">Presupuesto</a>
+              <a class="nav-link" href="presupuestos.html">Presupuesto</a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="views/contacto.html"
+                href="contacto.html"
                 >Contacto</a
               >
             </li>
@@ -197,7 +207,7 @@
           <div class="col-12 col-lg-6">
             <p class="text-white">
               Direccion: Calle D` Aaron Vidal Lopez, 46026, valencia.
-              <a href="views/contacto.html"> Encuentranos</a>
+              <a href="contacto.html"> Encuentranos</a>
             </p>
           </div>
           <div class="col-12 col-lg-6">
@@ -215,6 +225,6 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
