--- a/views/presupuestos.html
+++ b/views/presupuestos.html
@@ -21,12 +21,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="icon" href="./img/favicon.png" />
+    <link rel="icon" href="../img/favicon.png" />
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="./index.html">
+        <a class="navbar-brand" href="../index.html">
           <img
             src="../img/logo_transparente_blanco_ADM.png
             "
@@ -89,7 +89,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contacto.html">Contacto</a>
+              <a class="nav-link" href="contacto.html">Contacto</a>
             </li>
           </ul>
         </div>
