--- a/views/contacto.html
+++ b/views/contacto.html
@@ -25,10 +25,11 @@
       rel="stylesheet"
     />
     <!--  link estilos css propios -->
-    <link rel="stylesheet" href="css/style.css" />
+
+    <link rel="stylesheet" href="../css/style.css" />
 
     <!--  Imagen de barra de navegador (favicon) -->
-    <link rel="icon" href="img/logo_transparente_ADM.png" />
+    <link rel="icon" href="../img/logo_transparente_ADM.png" />
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
