--- a/views/presupuestos.html
+++ b/views/presupuestos.html
@@ -21,15 +21,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="icon" href="../img/favicon.png" />
+    <link rel="icon" href="../img/logo_icon_ADM.png" />
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="../index.html">
           <img
-            src="../img/logo_transparente_blanco_ADM.png
-            "
+            src="../img/logo_transparente_ADM.png"
             alt="Alpha Digital Media"
           />
         </a>
