--- a/views/galeria.html
+++ b/views/galeria.html
@@ -13,11 +13,13 @@
       crossorigin="anonymous"
     />
     <!-- link cdn iconos de boostrap -->
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
     />
     <!--   links para fuentes -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,13 +27,16 @@
       rel="stylesheet"
     />
     <!--   link estilos propios -->
-    <link rel="stylesheet" href="/..css/style.css" />
+
+    <link rel="stylesheet" href="../css/style.css" />
+
     <!--  Imagen de barra de navegador (favicon) -->
-    <link rel="icon" href="/..img/favicon.png" />
+
+    <link rel="icon" href="../img/logo_icon_ADM.png" />
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
+      <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">
           <img
             src="../img/logo_transparente_ADM.png"
