--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,11 @@ a:hover {
   text-decoration: underline;
 }
 
+/* pagina de contacto */
+#map {
+  height: 400px; /* Ajusta la altura del mapa */
+  width: 100%;
+}
 /* X-Small devices (portrait phones, less than 576px)
      No media query for `xs` since this is the default in Bootstrap */
 /*  Small devices (landscape phones, 576px and up) */
