--- a/views/contacto.html
+++ b/views/contacto.html
@@ -38,7 +38,7 @@
     <link rel="icon" href="../img/logo_transparente_ADM.png" />
 
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6Xnqvjkn1AORzI9t5fTmSlrOzaKUnmxo&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
       async
       defer
     ></script>
@@ -119,7 +119,7 @@
         <h1 class="text-center">Contacto</h1>
 
    <!-- Sección de contacto -->
-    <div class="row">
+    <div class="row pt-5">
       <div class="col-md-6">
         <h2>Datos de Contacto</h2>
         <p><strong>Nombre del Negocio:</strong> Alpha Digital Media</p>
