--- a/views/contacto.html
+++ b/views/contacto.html
@@ -117,6 +117,7 @@
       <div class="container mb-5">
         <h1 class="text-center">Pagina de contacto</h1>
 
+        <div id="new"></div>
         <!-- Sección de contacto -->
         <div class="row pt-5">
           <div class="col-md-6">
