--- a/css/galeria.css
+++ b/css/galeria.css
@@ -101,13 +101,6 @@ a:hover {
   );
 }
 
-.bg-hero-image {
-  background-image: var(--bg-image);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
 .bg-third-color {
   background-color: var(--third-color);
 }
@@ -119,96 +112,185 @@ a:hover {
 .text-third {
   color: var(--third-color);
 }
-
-/* estilos seccion noticias*/
-#news-section {
-  background-color: #f4f4f4;
-  padding: 20px;
-}
-
-.news-image {
-  max-width: 100%;
-  height: auto;
-  display: block;
-  margin-bottom: 10px;
-}
-
-.news-item {
-  background: white;
-  border: 1px solid #ccc;
-  padding: 15px;
-  margin-bottom: 15px;
-}
-
-.news-item h3 {
-  margin-top: 0;
-}
-
-.news-item a {
-  color: #007bff;
+a {
   text-decoration: none;
 }
 
-.news-item a:hover {
-  text-decoration: underline;
+.container {
+  width: 90%;
+  max-width: 800px;
+  margin: auto;
 }
 
-/* pagina de contacto */
-#map {
-  height: 500px; /* Ajusta la altura del mapa */
+/* HEADER */
+
+header {
+  padding: 40px 0;
+}
+
+header .logo {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+header p {
+  font-weight: 800;
+  margin-top: 10px;
+  color: #9b9b9b;
+}
+
+header form {
   width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
-/* breakpoints */
-/* X-Small devices (portrait phones, less than 576px)
-     No media query for `xs` since this is the default in Bootstrap */
-/*  Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {
+header .barra-busqueda {
+  width: 70%;
+  height: 40px;
+  line-height: 40px;
+  background-color: #fff;
+  padding: 0 20px;
+  border-radius: 100px;
+  border: none;
+  text-align: center;
+  font-size: 16px;
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0);
 }
 
-/*  Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
+header .barra-busqueda:focus {
+  outline: none;
+  border: none;
 }
 
-/*  Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-  .nav-item:hover {
-    background-color: transparent;
-  }
+header .categorias {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-/*  X-Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
+header .categorias a {
+  color: #9b9b9b;
+  margin: 10px 20px;
+  font-size: 18px;
+  font-weight: 700;
 }
 
-/*  XX-Large devices (larger desktops, 1400px and up) */
-@media (min-width: 1400px) {
+header .categorias a.activo {
+  color: #000;
 }
 
-/********************styles formulario************************/
-form {
-  width: 400px;
-  margin: 0 auto;
+/* GALERIA DE IMAGENES */
+
+.grid {
+  position: relative;
+  width: 100%;
+  opacity: 0;
+  transition: opacity 0.5s linear 1s;
 }
 
-input,
-select {
+.grid.imagenes-cargadas {
+  opacity: 1;
+}
+
+.grid .item {
+  position: absolute;
   display: block;
-  margin-bottom: 10px;
-  padding: 5px;
+  padding: 0;
+  margin: 10px;
+  width: calc(33.33333% - 20px);
+}
+
+.grid .item-contenido {
+  position: relative;
+}
+
+.grid .item img {
+  width: 100%;
+  cursor: pointer;
+  vertical-align: top;
+  border-radius: 10px;
+}
+
+/* OVERLAY */
+
+.overlay {
+  padding: 20px;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  width: 100%;
+  height: 100vh;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.overlay.activo {
+  display: flex;
+}
+
+.overlay img {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 15px;
+}
+
+.overlay .descripcion {
+  display: block;
+  background: #fff;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+  margin-top: 5px;
+  max-width: 50%;
+}
+
+.container-img {
+  position: relative;
+  max-width: 600px;
   width: 100%;
 }
 
-label {
-  font-weight: bold;
+.container-img button {
+  background: none;
+  font-size: 20px;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  right: -20px;
+  top: -20px;
+  outline: none;
 }
 
-.extras {
-  margin: 10px 0;
-}
+/* RESPONSIVE DESING */
 
-#result {
-  margin-top: 20px;
-  font-weight: bold;
-  color: green;
+@media screen and (max-width: 700px) {
+  header .barra-busqueda {
+    width: 100%;
+  }
+
+  header .categorias a {
+    margin: 10px 10px;
+    font-size: 18px;
+    font-weight: 700;
+  }
+
+  .grid .item {
+    width: calc(50% - 20px);
+  }
+
+  .container-img {
+    width: 80%;
+  }
+
+  .overlay .descripcion {
+    max-width: 90%;
+  }
 }
