--- a/views/galeria.html
+++ b/views/galeria.html
@@ -106,8 +106,8 @@
       <!-- BARRA DE BUSQUEDA -->
       <header>
         <div class="logo">
-          <h1>Fotógrafo e Ilustrador</h1>
-          <p>Antonio Rodríguez</p>
+          <h1>Alpha Digital Media</h1>
+          <h3>Galeria</h3>
         </div>
         <form action="">
           <input
