--- a/views/presupuestos.html
+++ b/views/presupuestos.html
@@ -60,17 +60,17 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="sitios.html#ultimos-proyectos"
+                  <a class="dropdown-item" href="galeria.html#proyectos"
                     >Últimos Proyectos</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="sitios.html#single-page"
+                  <a class="dropdown-item" href="galeria.html#singlepage"
                     >Sitio <i>Single Page</i></a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="sitios.html#multi-page"
+                  <a class="dropdown-item" href="galeria.html#multipage"
                     >Sitio <i>Multi Page</i></a
                   >
                 </li>
@@ -300,8 +300,8 @@
         <div class="row pt-4">
           <div class="col-12 col-lg-6">
             <p class="text-white">
-              Direccion: Calle D` Aaron Vidal Lopez, 46026, valencia.
-              <a href="/contacto.html"> Encuentranos</a>
+              Direccion: Calle andarella 1, 46014, valencia.
+              <a href="contacto.html"> Encuentranos</a>
             </p>
           </div>
           <div class="col-12 col-lg-6">
