--- a/views/contacto.html
+++ b/views/contacto.html
@@ -113,28 +113,27 @@
         </div>
       </div>
     </nav>
-    <main class="pt-5 bg-color">
+    <main class="pt-5 bg-gradient-blue">
       <div class="container mb-5">
-        <h1 class="text-center">Pagina de contacto</h1>
+        <h1 class="text-center text-white">Pagina de contacto</h1>
 
-        <div id="new"></div>
         <!-- Sección de contacto -->
         <div class="row pt-5">
-          <div class="col-md-6">
+          <div class="col-12 col-md-6 text-white">
             <h2 class="pb-5">Datos de Contacto</h2>
             <p><strong>Nombre del Negocio:</strong> Alpha Digital Media</p>
             <p>
               <strong>Dirección:</strong> Calle Andarella 1, 46014 Valencia,
               España
             </p>
-            <p><strong>Teléfono:</strong> +123 456 7890</p>
-            <p><strong>Email:</strong> contacto@alphadigital.com</p>
+            <p><strong>Teléfono:</strong> +34 698 789 254</p>
+            <p><strong>Email:</strong> contacto@alphadigitalmedia.com</p>
           </div>
 
           <!-- Mapa de Google Maps -->
           <div class="pt-5">
-            <h2 class="pb-3">Ubicación en el Mapa</h2>
-            <div id="map"></div>
+            <h2 class="pb-3 text-white">Ubicación en el Mapa</h2>
+            <div class="pb-5" id="map"></div>
           </div>
         </div>
       </div>
