--- a/views/galeria.html
+++ b/views/galeria.html
@@ -102,13 +102,13 @@
         </div>
       </div>
     </nav>
-    <div class="container">
+    <div class="container-fluid bg-gradient-blue">
       <!-- BARRA DE BUSQUEDA -->
       <header>
         <div class="logo">
           <h1>Alpha Digital Media</h1>
         </div>
-        <form action="">
+        <form action="#">
           <input
             type="text"
             class="barra-busqueda"
