--- a/views/galeria.html
+++ b/views/galeria.html
@@ -285,7 +285,7 @@
         <div class="row pt-4">
           <div class="col-12 col-lg-6">
             <p class="text-white">
-              Direccion: Calle D` Aaron Vidal Lopez, 46026, valencia.
+              Direccion: Calle andarella 1, 46014, valencia.
               <a href="contacto.html"> Encuentranos</a>
             </p>
           </div>
