--- a/views/galeria.html
+++ b/views/galeria.html
@@ -102,7 +102,7 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid bg-gradient-blue">
+    <div class="container-fluid">
       <!-- BARRA DE BUSQUEDA -->
       <header>
         <div class="logo">
@@ -237,16 +237,36 @@
             <img src="../img/menu_singlepage.jpg" alt="menu restaurante" />
           </div>
         </div>
+
+        <div
+          class="item"
+          data-categoria="multipage"
+          data-etiquetas="Proyecto ejemplo para web multi pagina"
+        >
+          <div class="item-contenido">
+            <img
+              src="../img/multipage_example.png"
+              alt="ejemplo multi pagina"
+            />
+          </div>
+        </div>
+
+        <div
+          class="item"
+          data-categoria="clientes"
+          data-etiquetas="clienta dueña de Hey Textile"
+        >
+          <div class="item-contenido">
+            <img src="../img/clients-3.jpg" alt="Lori Knisely" />
+          </div>
+        </div>
       </section>
 
       <!-- OVERLAY -->
       <section class="overlay" id="overlay">
         <div class="container-img">
           <button id="btn-cerrar"><i class="bi bi-x-circle"></i></button>
-          <img
-            src="../img/logo_transparente_ADM.png"
-            alt="Alpha Digital Media"
-          />
+          <img src="#" alt="Alpha Digital Media" />
         </div>
       </section>
     </div>
